@@ -55,6 +55,13 @@
 [/advanced_preference]
 
 [advanced_preference]
+    field=middle_click_scrolls
+    name=_"Middle-click Scrolling"
+    type=boolean
+    default=yes
+[/advanced_preference]
+
+[advanced_preference]
     field=animate_map
     name=_"Animate Map"
     type=boolean
