@@ -1,12 +1,14 @@
 Version 1.5.7+svn:
  * Graphics:
+   * new portrait for Royal Guard, Heavy Infantry
    * Fixed drawing glitches in the listboxes.
+   * Fixed several glitches with the new portrait dialog.
+ * User interface:
+   * new advanced preference to choose whether middle-click scrolls or warps
    * Fixed a glitch which closed a new dialog on the mouse up event of the old
      dialog (the effect is percieved as the new dialog not showing up).
    * Spacebar closes the dialogs without a scrollbar again.
    * Pressing escape in a new dialog, behaves like in the old dialogs again.
-   * new portrait for Royal Guard, Heavy Infantry
-   * Fixed several glitches in with the listboxes and new portrait dialog.
  * Language and i18n:
    * updated translations: German, Hungarian, Italian, Japanese, Slovak,
      Spanish
